# TransparencyX

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: DATA_SOURCES.md  PROJECT_BRIEF.md  README.txt  ROADMAP.md  TRANSACTION_METRICS.md  addison-mcdowell.html  addison-mcdowell.json  addison-p-mcdowell.html  addison-p-mcdowell.json  adrian-smith.html  adrian-smith.json  alma-s-adams.html  alma-s-adams.json  alma-shealey-adams.html  alma-shealey-adams.json  brad-knott.html  brad-knott.json  build_manifest.json  chris-pappas.html  chris-pappas.json  chuck-edwards.html  chuck-edwards.json  committee_coverage.json  dataset_validation.json  david-rouzer.html  david-rouzer.json  deborah-k-ross.html  deborah-k-ross.json  deborah-ross.html  deborah-ross.json  don-davis.html  don-davis.json  donald-g-davis.html  donald-g-davis.json  donald-j-bacon.html  donald-j-bacon.json  greg-murphy.html  greg-murphy.json  gregory-f-murphy.html  gregory-f-murphy.json  (+30 more)
tests/: test_acquisition_validate_pdf.py  test_asset_noise_classification.py  test_asset_normalization.py  test_database.py  test_dataset_validation.py  test_demo_runner.py  test_dossier_builder.py  test_dossier_export.py  test_dossier_html.py  test_dossier_schema.py  test_dossier_site_build.py  test_dossier_site_manifest.py  test_dossier_site_readme.py  test_dossier_site_validator.py  test_exposure_diagnostics.py  test_extractors.py  test_house_doc_id_identity.py  test_house_ingest.py  test_member_metadata.py  test_member_metadata_seed.py  test_member_names.py  test_models.py  test_profile_batch.py  test_profile_card.py  (+22 more)
(+74 files in other folders)
